# BULLsEYE-JSFX-CPP-LICENSE

./: .gitignore  .gitmodules  ABSTRACTION_GAP.md  ASSESSMENT_REPORT_SPRINT5_PREFLIGHT.md  BUILD_DEPLOYMENT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DAW_TESTING.md  DROPS_INDEX.md  FRAMEWORK_MIGRATION.md  GUI_COMPONENTS.md  LAW_BOOK.md  LEARNINGS.md  LUFS_BOOTSTRAP.md  MIGRATION_LAWS.md  MIGRATION_PLAN.md  NOTARIZATION.md  PLAYBOOK_BLINDSPOTS.md  PLAYBOOK_REVIEW_FIXES.md  PORTING_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFERENCE.md  RELEASE_NOTES.md  REVIEW.md  SPRINT.md  SPRINT_4_AGENT_PLAYBOOK.md  STATUS.md  STATUS_STATES.md  TEMPLATE_UPDATE.md  build.sh  debug_coeffs  debug_coeffs.cpp  lufs_diagnostic  lufs_diagnostic.cpp  sprint_2.md
.cursor/: rules
.github/workflows/: linux-build.yml  windows-build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: CircularMeterComponent.cpp  CircularMeterComponent.h  InvertToggleComponent.cpp  InvertToggleComponent.h  LEDStripMeter.cpp  LEDStripMeter.h  ModeDescriptionComponent.cpp  ModeDescriptionComponent.h  ModeSelectorComponent.cpp  ModeSelectorComponent.h  MuteButtonComponent.cpp  MuteButtonComponent.h  StatusDisplayComponent.cpp  StatusDisplayComponent.h
Source/DSP/: BULLsEYEProcessor.h  YourProcessor.h
Source/SSOT/: DSPSSOT.h  ModelSSOT.h  ProcessorSSOT.h  UISSOT.h
distribution/: PACKAGE_SIZES.md  package.yml
docs/: AGENT_MENTAL_MODEL.md  AGENT_OPERATIONAL_CHECKLIST.md  CODE_SIGNING.md  DOCUMENTATION_SUMMARY.md  INSTALLATION.md  LINUX_BUILD.md  MACOS_BUILD.md  README.md  ScreenshotCaptureGuide.md  UserManual.md  WINDOWS_BUILD.md
gold_digger/: GOLD_DIGGING_PLAYBOOK.md  README.md
jsfx/: BULLsEYE-Mini-Combo.jsfx  README.md
portable-license-drop-in/: DEPENDENCIES_ASSESSMENT.md  INTEGRATION_GUIDE.md  LEARNING_CURVE_ANALYSIS.md  LICENSE  LICENSE_DROP_IN_LAWS.md  LICENSE_ENGINE_INTEGRATION_PLAN.md  NETWORK_VALIDATION_REFERENCE.md  README.md  VERIFICATION_REPORT.md
portable-license-drop-in/baseline/: 01_THREAD_SAFETY.md
portable-license-drop-in/core/: LICENSE_ENGINE.hpp  LICENSE_ENGINE_EXTRACTOR.hpp  LICENSE_ENGINE_FACTORIZED.hpp
portable-license-drop-in/examples/AU/: AUPluginExample.mm
portable-license-drop-in/examples/AnalogMorphV3Plugin/: AnalogMorphV3PluginExample.cpp
portable-license-drop-in/examples/Standalone/: StandaloneAppExample.cpp
portable-license-drop-in/examples/VST3/: VST3PluginExample.cpp
templates/: COMPONENT_TEMPLATE.md  DSP_TEMPLATE.md  REVIEW_TEMPLATE.md  SSOT_TEMPLATE.md
templates/BULLsEYE.lv2/: manifest.ttl
tests/: CMakeLists.txt  run_tests.sh
tests/DSP/: TestBULLsEYEProcessor.cpp
tests/Integration/: TestBULLsEYEIntegration.cpp
visualizer/: ARCHITECTURE.md  INTRODUCTION.md  LAW_EXTRACTION_HAPPYTOWN_SPECTRUM.md  README.md  REFERENCE_ADOPTION_STRATEGY.md  STAGE_1_IMPLEMENTATION_GUIDE.md  STAGE_1_PLAN.md
